migrate: update test fakes and the new gpios for this board. fix warnings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "*.c": "c",
         "string.h": "c",
         "unity_helper.h": "c",
-        "stm32f4xx_hal_rcc.h": "c"
+        "stm32f4xx_hal_rcc.h": "c",
+        "led.h": "c"
     }
 }
