--- a/MyHAL.uvprojx
+++ b/MyHAL.uvprojx
@@ -456,6 +456,11 @@
               <FileType>1</FileType>
               <FilePath>.\src\MySD.c</FilePath>
             </File>
+            <File>
+              <FileName>MyDipSwitch.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\src\MyDipSwitch.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
