--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "string.h": "c",
         "unity_helper.h": "c",
         "stm32f4xx_hal_rcc.h": "c",
-        "led.h": "c"
+        "led.h": "c",
+        "mycommon.h": "c"
     }
 }
