feat: snooping app uart on interrupt, saves to circular buffer

--- a/project.yml
+++ b/project.yml
@@ -38,6 +38,7 @@
     - C:/Keil_v5/ARM/PACK/Keil/STM32F0xx_DFP/2.1.1/Drivers/STM32F0xx_HAL_Driver/Inc
   :source:
     - src/**
+    - test/fakes/
   :support:
     - test/fakes
     - test/support
