feat: do tdd for serial snooper app and more...
- uart irq just saves incoming data to circular buffer, doesnt do any
  processing
- the processing is done by the serial snooper app, i.e. add timestamp
- the MySD module now controls LED too
- serial snooper shall flush the sd card every 500 ms
- !! the serial snooper tests need to be refactored. !!

--- a/MyHAL.uvprojx
+++ b/MyHAL.uvprojx
@@ -477,9 +477,9 @@
               <FilePath>.\src\MyCircularBuffer.c</FilePath>
             </File>
             <File>
-              <FileName>MyRTC.c</FileName>
+              <FileName>MyTimeString.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\src\MyRTC.c</FilePath>
+              <FilePath>.\src\MyTimeString.c</FilePath>
             </File>
           </Files>
         </Group>
