--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,14 @@
         "unity_helper.h": "c",
         "stm32f4xx_hal_rcc.h": "c",
         "led.h": "c",
-        "mycommon.h": "c"
+        "mycommon.h": "c",
+        "bit": "c",
+        "cstddef": "c",
+        "string": "c",
+        "optional": "c",
+        "limits": "c",
+        "memory": "c",
+        "new": "c",
+        "functional": "c"
     }
 }
