--- a/MyHAL.uvprojx
+++ b/MyHAL.uvprojx
@@ -486,6 +486,11 @@
               <FileType>1</FileType>
               <FilePath>.\src\MyRTC.c</FilePath>
             </File>
+            <File>
+              <FileName>BaudDecider.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\src\BaudDecider.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
