chore: update file structure
- move files to their own folders and update Keil dirs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "limits": "c",
         "memory": "c",
         "new": "c",
-        "functional": "c"
+        "functional": "c",
+        "mock_myterminaluart.h": "c"
     }
 }
