chore: change project name to Serial Snooper

--- a/SerialSnooper.uvprojx
+++ b/SerialSnooper.uvprojx
@@ -49,7 +49,7 @@
             <InvalidFlash>1</InvalidFlash>
           </TargetStatus>
           <OutputDirectory>.\Objects\</OutputDirectory>
-          <OutputName>MyHAL</OutputName>
+          <OutputName>SerialSnooper</OutputName>
           <CreateExecutable>1</CreateExecutable>
           <CreateLib>0</CreateLib>
           <CreateHexFile>0</CreateHexFile>
