--- a/SerialSnooper.uvprojx
+++ b/SerialSnooper.uvprojx
@@ -312,7 +312,7 @@
           <Cads>
             <interw>1</interw>
             <Optim>1</Optim>
-            <oTime>0</oTime>
+            <oTime>1</oTime>
             <SplitLS>0</SplitLS>
             <OneElfS>1</OneElfS>
             <Strict>0</Strict>
@@ -470,6 +470,11 @@
               <FileName>BaudDecider.c</FileName>
               <FileType>1</FileType>
               <FilePath>.\src\dip_switch\BaudDecider.c</FilePath>
+            </File>
+            <File>
+              <FileName>ErrorIndicator.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\src\led\ErrorIndicator.c</FilePath>
             </File>
           </Files>
         </Group>
