(to squash) just saving as system is working currently but tests won't pass as I'm rewriting serial snooper

--- a/SerialSnooper.uvprojx
+++ b/SerialSnooper.uvprojx
@@ -476,6 +476,11 @@
               <FileType>1</FileType>
               <FilePath>.\src\led\ErrorIndicator.c</FilePath>
             </File>
+            <File>
+              <FileName>SystemOperations.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\src\serial_snooper\SystemOperations.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
