feat: add DataHolder module (very heavily mocked, may need refactoring)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         "memory": "c",
         "new": "c",
         "functional": "c",
-        "mock_myterminaluart.h": "c"
+        "mock_myterminaluart.h": "c",
+        "xutility": "c"
     }
 }
