--- a/SerialSnooper.uvprojx
+++ b/SerialSnooper.uvprojx
@@ -481,6 +481,11 @@
               <FileType>1</FileType>
               <FilePath>.\src\serial_snooper\SystemOperations.c</FilePath>
             </File>
+            <File>
+              <FileName>DataHolder.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\src\serial_snooper\DataHolder.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
