migrate tests, all are passing now

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
         "new": "c",
         "functional": "c",
         "mock_myterminaluart.h": "c",
-        "xutility": "c"
+        "xutility": "c",
+        "mock_mycircularbuffer.h": "c"
     }
 }
