--- a/project.yml
+++ b/project.yml
@@ -33,9 +33,9 @@
   :test:
     - +:test/**
   :include:
-    - C:/Keil_v5/ARM/PACK/Keil/STM32F0xx_DFP/2.1.1/Drivers/CMSIS/Device/ST/STM32F0xx/Include
     - C:/Keil_v5/ARM/PACK/ARM/CMSIS/5.3.0/CMSIS/Include
-    - C:/Keil_v5/ARM/PACK/Keil/STM32F0xx_DFP/2.1.1/Drivers/STM32F0xx_HAL_Driver/Inc
+    - C:/Keil_v5/ARM/PACK/Keil/STM32F3xx_DFP/2.2.2/Drivers/CMSIS/Device/ST/STM32F3xx/Include
+    - C:\Keil_v5\ARM\PACK\Keil\STM32F0xx_DFP\2.1.1\Drivers\STM32F0xx_HAL_Driver\Inc\stm32f0xx_hal_uart_ex.h
   :source:
     - src/**
     - test/fakes/
@@ -51,7 +51,7 @@
   #  1) remove the trailing [] from the :common: section
   #  2) add entries to the :common: section (e.g. :test: has TEST defined)
   :common: &common_defines
-    - STM32F031x6
+    - STM32F303x8
   :test:
     - *common_defines
     - TEST
