--- a/SerialSnooper.uvprojx
+++ b/SerialSnooper.uvprojx
@@ -486,6 +486,11 @@
               <FileType>1</FileType>
               <FilePath>.\src\serial_snooper\MyScheduler.c</FilePath>
             </File>
+            <File>
+              <FileName>FileNameIterator.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\src\FileNameIterator.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
